--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,10 @@ spring:
 
 
 eureka:
+  instance:
+    prefer-ip-address: false
+    hostname: localhost
+
   client:
     register-with-eureka: true
     fetch-registry: true
